# rink-rs

./: .codecov.yml  .editorconfig  .gitignore  .gitmodules  .tokeignore  .travis.yml  ARCHITECTURE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE-MIT  Makefile  PACKAGING.md  README.md  SECURITY.md  currency.units  datepatterns.txt  definitions.units  package-lock.json  package.json  readme.md  tsconfig.json  units.txt
.circleci/: config.yml
cli/: Cargo.toml  Makefile  PACKAGING.md  rink-dates.5.adoc  rink-defs.5.adoc  rink.1.adoc  rink.5.adoc  rink.7.adoc  rink.desktop
cli/src/: config.rs  currency.rs  fmt.rs  helper.rs  lib.rs  main.rs  repl.rs  runner.rs  service.rs  style_ser.rs
cli/tests/: cli_args.rs  cli_eval.rs  config_for_tests.toml  config_sandboxed.toml  config_sandboxed_local_server.toml  example.units  fmt_test.rs  http_test.rs  repl.rs  style_ser_test.rs
converter/: Cargo.toml
core/: BREAKING-CHANGES.md  Cargo.toml  README.md  currency.units  datepatterns.txt  definitions.units
core/src/: ast.rs  bigint.rs  bigrat.rs  btc.rs  context.rs  currency.rs  date.rs  dateparse.rs  eval.rs  fmt.rs  formula.rs  gnu_units.rs  helpers.rs  lib.rs  load.rs  number.rs  numeric.rs  reply.rs  search.rs  substance.rs  text_query.rs  value.rs
core/src/algorithms/: btree_merge.rs  fast_decompose.rs  mod.rs  search.rs
core/src/ast/: def.rs  expr.rs  mod.rs  query.rs  test.rs
core/src/commands/: factorize.rs  mod.rs  search.rs
core/src/loader/: context.rs  gnu_units.rs  load.rs  mod.rs  registry.rs
core/src/output/: doc_string.rs  fmt.rs  mod.rs  number_parts.rs  numeric_parts.rs  reply.rs
core/src/parsing/: datetime.rs  formula.rs  mod.rs  text_query.rs
core/src/runtime/: eval.rs  mod.rs  substance.rs  value.rs
core/src/types/: base_unit.rs  bigint.rs  bigrat.rs  date.rs  datetime.rs  dimensionality.rs  humanize.rs  mod.rs  number.rs  numeric.rs
core/tests/: ast_format.rs  ast_serde.rs  canonicalize.rs  currency.snapshot.json  currency_loading.rs  gnu_units.rs  query.rs  spans.rs  token_fmt.rs
data/: Cargo.toml  _uncategorized.kdl  build.rs
data-compiler/: Cargo.toml
data/benches/: load_time.rs
data/categories/: apothecary.kdl  arabic.kdl  atmospheric.kdl  atomic.kdl  au_volume.kdl  avoirdupois.kdl  base_units.kdl  br_bottles.kdl  br_length.kdl  br_volume.kdl  br_weight.kdl  calories.kdl  cgs.kdl  cloth.kdl  compuing.kdl  concentrations.kdl  constants.kdl  derived_customary.kdl  dosage.kdl  dozenal.kdl  egyptian.kdl  english.kdl  flow_units.kdl  fr_bottle.kdl  french.kdl  gauges.kdl  greek.kdl  grits.kdl  horses.kdl  human_measures.kdl  int_customary.kdl  int_nautical.kdl  irish.kdl  japanese.kdl  jewelers.kdl  long_system.kdl  music.kdl  northern_cubic.kdl  numbers.kdl  paper.kdl  (+22 more)
data/src/: lib.rs
docs/: rink-dates.5.adoc  rink-defs.5.adoc  rink.1.adoc  rink.5.adoc  rink.7.adoc
format/: Cargo.toml
importer/: Cargo.toml
irc/: Cargo.toml  README.md
irc/src/: config.rs  fmt.rs  main.rs  service.rs
real/: Cargo.toml  README.md
rink-js/: Cargo.toml  README.md
rink-js/src/: lib.rs
rink-js/tests/: simple.rs
sandbox/: Cargo.toml  README.md
sandbox/examples/: add_two.rs
sandbox/integration/: main.rs
sandbox/src/: alloc.rs  become_child.rs  child.rs  child_guard.rs  error.rs  frame.rs  lib.rs  message.rs  parent.rs  reader_thread.rs  response.rs  sandbox.rs  service.rs
src/: alloc.rs  ast.rs  bigint.rs  bigrat.rs  btc.rs  completer.rs  config.rs  context.rs  currency.rs  date.rs  derivatives.rs  eval.rs  factorize.rs  fmt.rs  formula.rs  gnu_units.rs  helper.rs  lib.rs  load.rs  main.rs  num.rs  number.rs  repl.rs  reply.rs  sandbox.rs  search.rs  service.rs  style_de.rs  style_ser.rs  substance.rs  text_query.rs  value.rs  (+1 more)
web/: .editorconfig  Cargo.toml  README.adoc  README.md  index.html  package-lock.json  package.json  rink-web.toml.sample  rollup.config.js  soupault.toml  svelte.config.js  tsconfig.json
web/currency/: defs.ts  package-lock.json  package.json  update-currency.js  update-currency.ts
web/plugins/: atom.lua  deuglify.lua  fetch-releases.lua  images.lua  opengraph.lua  relocate.lua  vite.lua  wasm-pack.lua
web/repl/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/repl/src/: index.ts  proto.ts  worker.ts
web/scripts/: asciidoc.js  hljs.js  katex.js
web/site/: about.adoc  cli-manpage.adoc  configuration.adoc  datepatterns-format.adoc  definitions-format.adoc  global.css  index.html  manifest.json  manual.adoc  opensearch.xml  releases.html  rink-repl.css  rink-repl.js  rink.webmanifest  webfonts.css
web/src/: App.svelte  App.ts  client.js  currency.ts  ecb-defaults.json  index.ts  lib.rs  main.rs  server.js  stores.ts  template.html  worker.rs
web/src/components/: App.svelte  Card.svelte  Container.svelte  Dimensionality.svelte  Expr.svelte  ExprNode.svelte  ExprParts.svelte  NavButton.svelte  Number.svelte  NumberParts.svelte  Numeric.svelte  OpenGraph.svelte  PrecedenceWrapper.svelte  QueryInput.svelte  Result.svelte
web/src/components/expr/: Binop.svelte  Call.svelte  Const.svelte  Date.svelte  Expr.svelte  Fraction.svelte  Mul.svelte  Node.svelte  Of.svelte  Pow.svelte  Quote.svelte  Unaryop.svelte  Unit.svelte
web/src/components/reply/: ConformanceError.svelte  ConversionReply.svelte  DateReply.svelte  DefReply.svelte  DurationReply.svelte  FactorizeReply.svelte  GenericError.svelte  NotFoundError.svelte  NumberReply.svelte  Result.svelte  SearchReply.svelte  SubstanceReply.svelte  UnitListReply.svelte  UnitsForReply.svelte
web/src/lib/: precedence.ts  reply.ts
web/src/routes/: index.svelte  test.svelte
web/src/routes/data/: _cached.ts  btc.json.ts  currency.json.ts  currency.xml.ts
web/src/routes/quantity/: [name].svelte
web/src/routes/query/: [input].svelte  index.svelte
web/src/routes/unit/: [name].svelte
web/src/util/: defs.ts  expr.ts  reply.ts  rink.ts
web/static/: global.css  manifest.json
web/templates/: expr-nolinks.hbs  expr.hbs  index.hbs  main-page.hbs  main.html  number.hbs  opensearch.hbs  query.hbs
web/tests/: simple.rs
(+40 files in other folders)
