[package]
name = "rink"
version = "0.6.0"
description = "Unit conversion tool, similar to frink"
homepage = "https://rinkcalc.app"
repository = "https://github.com/tiffany352/rink-rs"
readme = "README.md"
license = "MPL-2.0"
keywords = ["unit", "math", "conversion", "cli", "tool"]
categories = ["command-line-utilities", "mathematics", "science"]
edition = "2018"

[dependencies]
clap = "2.33.1"
dirs = "3.0.1"
reqwest = { version = "0.11.2", features = ["blocking"] }
chrono = "0.4.19"
serde_json = "1"
toml = "0.5"
serde_derive = "1"
serde = "1"
tempfile = "3.2"
eyre = "0.6"
color-eyre = { version = "0.5", default-features = false }
humantime-serde = "1.0.1"
rustyline = "8.0.0"
ansi_term = "0.12"

[dependencies.rink-core]
version = "0.6"
path = "./core"

[workspace]
members = ["core", "rink-js"]

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-g', '-O']
