[package]
name = "rink"
version = "0.8.0"
description = "Unit conversion tool, similar to frink"
homepage = "https://rinkcalc.app/about"
repository = "https://github.com/tiffany352/rink-rs"
readme = "../README.md"
license = "MPL-2.0"
keywords = ["unit", "math", "conversion", "cli", "tool"]
categories = ["command-line-utilities", "mathematics", "science"]
edition = "2018"

[features]
default = ["bundle-files"]
bundle-files = ["rink-core/bundle-files"]

[dependencies]
clap = "4.5"
dirs = "4"
curl = "0.4.46"
chrono = { version = "0.4.19", default-features = false }
serde_json = "1"
toml = "0.5"
serde_derive = "1"
serde = { version = "1", default-features = false }
tempfile = "3.2"
eyre = "0.6"
color-eyre = { version = "0.6", default-features = false }
humantime-serde = "1.0.1"
rustyline = { version = "9", default-features = false }
nu-ansi-term = "0.50"
async-std = { version = "1.9", features = ["attributes"], default-features = false }
ubyte = { version = "0.10.3", features = ["serde"] }

[dependencies.rink-core]
version = "0.8"
path = "../core"

[dependencies.rink-sandbox]
version = "0.6"
path = "../sandbox"

[dev-dependencies]
similar-asserts = "1.1.0"

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-g', '-O']
