[package]
name = "rink-core"
version = "0.7.0"
description = "Unit conversion library behind rink"
homepage = "https://github.com/tiffany352/rink-rs"
repository = "https://github.com/tiffany352/rink-rs"
readme = "README.md"
license = "MPL-2.0"
keywords = ["unit", "math", "conversion"]
edition = "2018"

[features]
default = ["chrono-humanize"]
bundle-files = []

[dependencies]
num-bigint = { version = "0.4", features = ["serde"] }
num-rational = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
chrono = "0.4.19"
strsim = "0.10.0"
chrono-tz = "0.5.2"
chrono-humanize = { version = "0.1.2", optional = true }
serde = { version = "1", features = ["rc"] }
serde_derive = "1"

[dev_dependencies]
serde_json = "1"
assert-json-diff = "2.0.1"
similar-asserts = "1.1.0"
