[package]
name = "rink-core"
version = "0.8.0"
description = "Unit conversion library behind rink"
homepage = "https://rinkcalc.app/about"
repository = "https://github.com/tiffany352/rink-rs"
readme = "README.md"
license = "MPL-2.0"
keywords = ["unit", "math", "conversion"]
edition = "2018"

[features]
default = []
bundle-files = []
serde_json = ["dep:serde_json"]

[dependencies]
num-bigint = { version = "0.4", features = ["serde"] }
num-rational = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
jiff = "0.2.15"
strsim = "0.10.0"
serde = { version = "1", features = ["rc"], default-features = false }
serde_json = { version = "1", optional = true }
serde_derive = "1"
indexmap = "2"

[dev-dependencies]
serde_json = { version = "1", default-features = false }
assert-json-diff = "2.0.1"
similar-asserts = "1.1.0"
