[package]
name = "rink-data"
version = "0.6.2"
edition = "2021"

[dependencies]
rink-format = { version = "0.6.2", path = "../format" }
bincode = "1"

[build-dependencies]
rink-data-compiler = { version = "0.6.2", path = "../data-compiler"}
eyre = "0.6"
color-eyre = "0.6"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "load_time"
harness = false
