[package]
name = "rink-importer"
version = "0.3.2"
authors = ["Tiffany Bennett <tiffany@stormbit.net>"]
description = "Data importer utilities for Rink, the unit conversion tool"
homepage = "https://github.com/tiffany352/rink-rs"
repository = "https://github.com/tiffany352/rink-rs"
readme = "README.md"
license = "MPL-2.0"

[dependencies]
rink = { path = "../" }
clap = "2.14.0"
encoding = "0.2"
lmdb = "0.6"

[[bin]]
name = "rink-import-usda"
