[package]
name = "rink-irc"
version = "0.4.0"
authors = ["Tiffany Bennett <tiffany@stormbit.net>"]
description = "IRC bot for Rink"
homepage = "https://github.com/tiffany352/rink-rs"
repository = "https://github.com/tiffany352/rink-rs"
license = "MPL-2.0"

[dependencies.rink-core]
path = "../core"

[dependencies]
glob = "0.2.11"

[dependencies.irc]
version = "0.11.8"
default-features = false
features = ["ctcp", "encode"]
