[package]
name = "rink-irc"
version = "0.8.0"
description = "IRC bot for Rink"
homepage = "https://rinkcalc.app/about"
repository = "https://github.com/tiffany352/rink-rs"
license = "MPL-2.0"
edition = "2018"

[dependencies.rink-core]
path = "../core"

[dependencies.rink-sandbox]
path = "../sandbox"

[dependencies]
futures = "0.3"
humantime-serde = "1.0.1"
irc = "1.0.0"
serde = { version = "1", default-features = false }
serde_derive = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
ubyte = { version = "0.10.3", features = ["serde"] }
