[package]
name = "rink-js"
version = "0.8.0"
description = "Wasm bindings to Rink, for use in rink-web"
homepage = "https://rinkcalc.app/about"
repository = "https://github.com/tiffany352/rink-rs"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies.rink-core]
path = "../core"
version = "0.8"
features = ["bundle-files", "serde_json"]

[dependencies]
wasm-bindgen = { version = "0.2", default-features = false }
js-sys = "0.3.44"
wee_alloc = { version = "0.4.5", default-features = false }
serde = { version = "1", default-features = false }
serde_derive = "1"
serde-wasm-bindgen = "0.6"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.23"

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-g', '-O']
