[package]
name = "rink-sandbox"
version = "0.6.1"
edition = "2018"
description = "Library for limiting memory usage and time spent of code, and allowing interrupts (ctrl+C)."
homepage = "https://rinkcalc.app"
repository = "https://github.com/tiffany352/rink-rs"
readme = "README.md"
license = "MPL-2.0"
keywords = ["cli", "sandbox"]
categories = ["command-line-utilities"]

[dependencies]
async-std = { version = "1.9", features = ["unstable", "attributes"] }
futures-util = "0.3"
bincode = "1.3.3"
displaydoc = "0.2"
thiserror = "1"
serde_derive = "1"
serde = "1"
shh = "1.0.1"
byteorder = "1"
color-eyre = "0.5"
async-ctrlc = { version = "1.2.0", features = ["stream"] }
