[package]
name = "rink-sandbox"
version = "0.6.1"
edition = "2018"
description = "Library for limiting memory usage and time spent of code, and allowing interrupts (ctrl+C)."
homepage = "https://rinkcalc.app"
repository = "https://github.com/tiffany352/rink-rs"
readme = "README.md"
license = "MPL-2.0"
keywords = ["cli", "sandbox"]
categories = ["command-line-utilities"]

[dependencies]
async-std = { version = "1.9", features = ["std", "unstable", "default"], default-features = false }
bincode = "1.3.3"
displaydoc = { version = "0.2", default-features = false }
thiserror = "1"
serde_derive = "1"
serde = { version = "1", default-features = false }
byteorder = { version = "1", default-features = false }
color-eyre = "0.5"
async-ctrlc = { version = "1.2.0", features = ["stream"], default-features = false }

[[test]]
name = "integration"
path = "integration/main.rs"
harness = false
