[package]
name = "rink-sandbox"
version = "0.6.1"
edition = "2018"
description = "Library for limiting memory usage and time spent of code, and allowing interrupts (ctrl+C)."
homepage = "https://rinkcalc.app/about"
repository = "https://github.com/tiffany352/rink-rs"
readme = "README.md"
license = "MPL-2.0"
keywords = ["cli", "sandbox"]
categories = ["command-line-utilities"]

[dependencies]
bincode = "1.3.3"
serde_derive = "1"
serde = { version = "1", default-features = false }
color-eyre = "0.5"
ctrlc = "3.4.7"

[[test]]
name = "integration"
path = "integration/main.rs"
harness = false
