[package]
name = "rink-web"
version = "0.5.0"
authors = ["Tiffany Bennett <tiffnixen@gmail.com>"]
description = "Web interface to Rink, a unit conversion tool"
homepage = "https://rinkcalc.app"
repository = "https://github.com/tiffany352/rink-rs"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"

[dependencies.rink]
path = "../"
version = "0.5"
